--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,16 @@ dependencies:
   url_launcher: ^6.3.1
   auto_route: ^9.2.2
   webview_flutter: ^4.10.0
+  bloc: ^8.1.4
+  mask_text_input_formatter: ^2.9.0
+  intl: ^0.20.1
+  injectable: ^2.5.0
+  equatable: ^2.0.7
+  dio: ^5.7.0
+  shared_preferences: ^2.3.3
+  get_it: ^8.0.3
+  flutter_bloc: ^8.1.6
+  # table_calendar: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -48,13 +58,14 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.2
   auto_route_generator: ^9.0.0
   build_runner: ^2.4.13
+  injectable_generator: ^2.6.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter_launcher_icons:
   android: "ic_launcher"
