--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   url_launcher: ^6.3.1
   auto_route: ^9.2.2
   webview_flutter: ^4.10.0
-  bloc: ^8.1.4
+  bloc: ^9.0.0
   mask_text_input_formatter: ^2.9.0
   intl: ^0.20.1
   injectable: ^2.5.0
@@ -49,7 +49,12 @@ dependencies:
   dio: ^5.7.0
   shared_preferences: ^2.3.3
   get_it: ^8.0.3
-  flutter_bloc: ^8.1.6
+  flutter_bloc: ^9.0.0
+  permission_handler: ^11.3.1
+  image_picker: ^1.1.2
+  firebase_core: ^3.10.0
+  firebase_messaging: ^15.2.0
+  flutter_local_notifications: ^18.0.1
   # table_calendar: ^3.1.3
 
 dev_dependencies:
