--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyDN_BAQ-yVYFIAui9SjiQoMRwm1iZTFYNI</string>
+	<string>AIzaSyD6cNwtcuSMdUThmyPVfyxIOgHcrcnEiLY</string>
 	<key>GCM_SENDER_ID</key>
-	<string>779607642047</string>
+	<string>74368097917</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.homehero.app</string>
 	<key>PROJECT_ID</key>
-	<string>homehero-1341d</string>
+	<string>homehero-5f32f</string>
 	<key>STORAGE_BUCKET</key>
-	<string>homehero-1341d.firebasestorage.app</string>
+	<string>homehero-5f32f.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:779607642047:ios:cb6fc16c2ed41b85701b0a</string>
+	<string>1:74368097917:ios:f9702cfba326e9256b1b14</string>
 </dict>
 </plist>
